# MedFlow-OpenEnv

./: .gitignore  Dockerfile  MedFlow_OpenENV_Training.ipynb  README.md  Training.ipynb  hftrl_colab.md  inference.py  openenv.yaml  output.txt  plot_graph.py  pyproject.toml  requirements.txt  test_api.py
app/: __init__.py  baseline.py  baseline_openai.py  client.py  env.py  grader.py  main.py  models.py  openenv_medflow.py  rl_agent.py  tasks.py  templates.py
openenv/: __init__.py
openenv/core/env_server/: __init__.py  interfaces.py
openenv_shim/core/: __init__.py  env_client.py
openenv_shim/core/env_server/: types.py
outputs/: eval_greedy.csv
outputs/benchmarks/: benchmark_summary.json  benchmark_summary.md
outputs/evals/: training_metrics.csv  training_summary.json  trl_summary.json  trl_training_metrics.csv
outputs/logs/: episode_0001.json  episode_0002.json  episode_0003.json  episode_0004.json  episode_0005.json
scripts/: benchmark_medflow.py  compare_before_after.py  greedy_policy.py  plot_rewards.py  train_qlearning.py
server/: __init__.py  app.py  hospital_environment.py  requirements.txt
templates/: ui.html
tests/: test_environment.py  test_rubric.py
train/: __init__.py  train_hftrl.py  train_unsloth.py
